--- a/Vuetify/v-data-table/v-data-table.html
+++ b/Vuetify/v-data-table/v-data-table.html
@@ -41,38 +41,43 @@ new Vue({
       },
       { text: 'X', value: 'x' },
       { text: 'Y', value: 'y' },
-      { title: 'Gluten-Free', value: 'x', key: 'glutenfree' }
+      { text: 'checkbox', title: 'Gluten-Free', key: 'glutenfree' }
     ],
     cities: [
       {
         id: 1,
         name: 'Москва',
         x: 38.9,
-        y: 65.5
+        y: 65.5,
+        glutenfree: true
       },
       {
         id: 2,
         name: 'Санкт-Петербург',
         x: 44.4,
-        y: 62.3
+        y: 62.3,
+        glutenfree: true
       },
       {
         id: 3,
         name: 'Казань',
         x: 22.0,
-        y: 51.3
+        y: 51.3,
+        glutenfree: true
       },
       {
         id: 4,
         name: 'Новосибирск',
         x: 68.0,
-        y: 50.7
+        y: 50.7,
+        glutenfree: true
       },
       {
         id: 5,
         name: 'Екатеринбург',
         x: 40.3,
-        y: 47.6
+        y: 47.6,
+        glutenfree: true
       }
     ]
   }),
