--- a/Vuetify/v-data-table/v-data-table-add-row-with-dialog.html
+++ b/Vuetify/v-data-table/v-data-table-add-row-with-dialog.html
@@ -31,20 +31,9 @@
             v-model="dialog"
             max-width="500px"
           >
-            <template v-slot:activator="{ on, attrs }">
-              <v-btn
-                color="primary"
-                dark
-                class="mb-2"
-                v-bind="attrs"
-                v-on="on"
-              >
-                New Item
-              </v-btn>
-            </template>
             <v-card>
               <v-card-title>
-                <span class="text-h5">{{ formTitle }}</span>
+                <span class="text-h5">Изменить цвет</span>
               </v-card-title>
   
               <v-card-text>
@@ -248,12 +237,6 @@ new Vue({
       protein: 0,
     },
   }),
-
-  computed: {
-      formTitle () {
-        return this.editedIndex === -1 ? 'New Item' : 'Edit Item'
-      },
-    },
 
   watch: {
     dialog (val) {
