--- a/Vuetify/v-data-table/v-data-table-add-row-with-dialog.html
+++ b/Vuetify/v-data-table/v-data-table-add-row-with-dialog.html
@@ -44,50 +44,13 @@
                       sm="6"
                       md="4"
                     >
-                      <v-text-field
-                        v-model="editedItem.name"
-                        label="Dessert name"
-                      ></v-text-field>
-                    </v-col>
-                    <v-col
-                      cols="12"
-                      sm="6"
-                      md="4"
-                    >
-                      <v-text-field
-                        v-model="editedItem.calories"
-                        label="Calories"
-                      ></v-text-field>
-                    </v-col>
-                    <v-col
-                      cols="12"
-                      sm="6"
-                      md="4"
-                    >
-                      <v-text-field
-                        v-model="editedItem.fat"
-                        label="Fat (g)"
-                      ></v-text-field>
-                    </v-col>
-                    <v-col
-                      cols="12"
-                      sm="6"
-                      md="4"
-                    >
-                      <v-text-field
-                        v-model="editedItem.carbs"
-                        label="Carbs (g)"
-                      ></v-text-field>
-                    </v-col>
-                    <v-col
-                      cols="12"
-                      sm="6"
-                      md="4"
-                    >
-                      <v-text-field
-                        v-model="editedItem.protein"
-                        label="Protein (g)"
-                      ></v-text-field>
+                      <v-select
+                        v-model="select"
+                        :items="colors"
+                        item-text="name"
+                        item-value="hex"
+                        @change="setColor"
+                      ></v-select>
                     </v-col>
                   </v-row>
                 </v-container>
@@ -135,6 +98,24 @@ new Vue({
   el: '#app',
   vuetify: new Vuetify(),
   data: () => ({
+    select: {
+      id: 1,
+      name: 'Красный',
+      hex: '#eb4034'
+    },
+    colors: [
+      {
+        id: 1,
+        name: 'Красный',
+        hex: '#eb4034'
+      },
+      {
+        id: 2,
+        name: 'Зеленый',
+        hex: '#4DFA5C'
+      }
+    ],
+
     dialog: false,
     headers: [
       {
@@ -220,22 +201,7 @@ new Vue({
         carbs: 65,
         protein: 7,
       },
-    ],
-    editedIndex: -1,
-    editedItem: {
-      name: '',
-      calories: 0,
-      fat: 0,
-      carbs: 0,
-      protein: 0,
-    },
-    defaultItem: {
-      name: '',
-      calories: 0,
-      fat: 0,
-      carbs: 0,
-      protein: 0,
-    },
+    ]
   }),
 
   watch: {
@@ -245,27 +211,20 @@ new Vue({
   },
 
   methods: {
+    setColor(hex) {
+      this.currentColor = hex 
+    },
 
     editItem (item) {
-      this.editedIndex = this.desserts.indexOf(item)
-      this.editedItem = Object.assign({}, item)
+      console.log(item)
       this.dialog = true
     },
 
     close () {
       this.dialog = false
-      this.$nextTick(() => {
-        this.editedItem = Object.assign({}, this.defaultItem)
-        this.editedIndex = -1
-      })
     },
 
     save () {
-      if (this.editedIndex > -1) {
-        Object.assign(this.desserts[this.editedIndex], this.editedItem)
-      } else {
-        this.desserts.push(this.editedItem)
-      }
       this.close()
     },
   }
