--- a/Vuetify/v-data-table/v-data-table-add-row-with-dialog.html
+++ b/Vuetify/v-data-table/v-data-table-add-row-with-dialog.html
@@ -137,6 +137,7 @@ new Vue({
         fat: 6.0,
         carbs: 24,
         protein: 4.0,
+        color: ''
       },
       {
         name: 'Ice cream sandwich',
@@ -144,6 +145,7 @@ new Vue({
         fat: 9.0,
         carbs: 37,
         protein: 4.3,
+        color: ''
       },
       {
         name: 'Eclair',
@@ -151,6 +153,7 @@ new Vue({
         fat: 16.0,
         carbs: 23,
         protein: 6.0,
+        color: ''
       },
       {
         name: 'Cupcake',
@@ -158,49 +161,8 @@ new Vue({
         fat: 3.7,
         carbs: 67,
         protein: 4.3,
-      },
-      {
-        name: 'Gingerbread',
-        calories: 356,
-        fat: 16.0,
-        carbs: 49,
-        protein: 3.9,
-      },
-      {
-        name: 'Jelly bean',
-        calories: 375,
-        fat: 0.0,
-        carbs: 94,
-        protein: 0.0,
-      },
-      {
-        name: 'Lollipop',
-        calories: 392,
-        fat: 0.2,
-        carbs: 98,
-        protein: 0,
-      },
-      {
-        name: 'Honeycomb',
-        calories: 408,
-        fat: 3.2,
-        carbs: 87,
-        protein: 6.5,
-      },
-      {
-        name: 'Donut',
-        calories: 452,
-        fat: 25.0,
-        carbs: 51,
-        protein: 4.9,
-      },
-      {
-        name: 'KitKat',
-        calories: 518,
-        fat: 26.0,
-        carbs: 65,
-        protein: 7,
-      },
+        color: ''
+      }
     ]
   }),
 
