--- a/Vuetify/v-data-table/v-data-table-item.html
+++ b/Vuetify/v-data-table/v-data-table-item.html
@@ -12,14 +12,17 @@
   <v-app>
     <v-data-table
       :headers="headers"
-      :items="cities"
+      :items="desserts"
+      class="elevation-1"
     >
-    <template v-slot:item.glutenfree="{ item }">
-      <v-checkbox-btn
-        v-model="item.value.glutenfree"
-        disabled
-      ></v-checkbox-btn>
-    </template>
+      <template v-slot:item.calories="{ item }">
+        <v-chip
+          :color="getColor(item.calories)"
+          dark
+        >
+          {{ item.calories }}
+        </v-chip>
+      </template>
     </v-data-table>
   </v-app>
 </div>
@@ -34,56 +37,82 @@ new Vue({
   data: () => ({
     headers: [
       {
-        text: 'Название',
+        text: 'Dessert (100g serving)',
         align: 'start',
         sortable: false,
         value: 'name',
       },
-      { text: 'X', value: 'x' },
-      { text: 'Y', value: 'y' },
-      { text: 'checkbox', title: 'Gluten-Free', key: 'glutenfree' }
+      { text: 'Calories', value: 'calories' },
+      { text: 'Fat (g)', value: 'fat' },
+      { text: 'Carbs (g)', value: 'carbs' },
+      { text: 'Protein (g)', value: 'protein' },
+      { text: 'Iron (%)', value: 'iron' },
     ],
-    cities: [
+    desserts: [
       {
-        id: 1,
-        name: 'Москва',
-        x: 38.9,
-        y: 65.5,
-        glutenfree: true
+        name: 'Frozen Yogurt',
+        calories: 159,
+        fat: 6.0,
+        carbs: 24,
+        protein: 4.0,
+        iron: 1,
       },
       {
-        id: 2,
-        name: 'Санкт-Петербург',
-        x: 44.4,
-        y: 62.3,
-        glutenfree: true
+        name: 'Cupcake',
+        calories: 305,
+        fat: 3.7,
+        carbs: 67,
+        protein: 4.3,
+        iron: 8,
       },
       {
-        id: 3,
-        name: 'Казань',
-        x: 22.0,
-        y: 51.3,
-        glutenfree: true
+        name: 'Gingerbread',
+        calories: 356,
+        fat: 16.0,
+        carbs: 49,
+        protein: 3.9,
+        iron: 16,
       },
       {
-        id: 4,
-        name: 'Новосибирск',
-        x: 68.0,
-        y: 50.7,
-        glutenfree: true
+        name: 'Jelly bean',
+        calories: 375,
+        fat: 0.0,
+        carbs: 94,
+        protein: 0.0,
+        iron: 0,
       },
       {
-        id: 5,
-        name: 'Екатеринбург',
-        x: 40.3,
-        y: 47.6,
-        glutenfree: true
-      }
-    ]
+        name: 'Lollipop',
+        calories: 392,
+        fat: 0.2,
+        carbs: 98,
+        protein: 0,
+        iron: 2,
+      },
+      {
+        name: 'Honeycomb',
+        calories: 408,
+        fat: 3.2,
+        carbs: 87,
+        protein: 6.5,
+        iron: 45,
+      },
+      {
+        name: 'KitKat',
+        calories: 518,
+        fat: 26.0,
+        carbs: 65,
+        protein: 7,
+        iron: 6,
+      },
+    ],
   }),
-
   methods: {
-
+    getColor (calories) {
+        if (calories > 400) return 'red'
+        else if (calories > 200) return 'orange'
+        else return 'green'
+      },
   },
 })
 </script>
