--- a/Vuetify/v-list/v-list.html
+++ b/Vuetify/v-list/v-list.html
@@ -107,16 +107,28 @@ new Vue({
   methods: {
     swapItem(item, i, side) {
       let copyHeaders = [...this.headers]
+      copyHeaders.splice(i, 1)
+      let compIndex
       switch(side) {
       case 'up':  
-        copyHeaders.splice(i, 1)
-        copyHeaders.splice(i - 1, 0, item)
+        if (i === 0) {
+          compIndex = copyHeaders.length
+        } else {
+          compIndex = i - 1
+        }
+        console.log('compIndex', compIndex)
+        copyHeaders.splice(compIndex, 0, item)
         this.headers = []
         this.headers = copyHeaders
         break;
       case 'down': 
-        copyHeaders.splice(i, 1)
-        copyHeaders.splice(i - 1, 0, item)
+        if (i === copyHeaders.length) {
+          compIndex = 0
+        } else {
+          compIndex = i + 1
+        }
+        console.log('compIndex', compIndex)
+        copyHeaders.splice(compIndex, 0, item)
         this.headers = []
         this.headers = copyHeaders
         break;
